# let

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: linux.yml  macos.yml  windows.yml
include/let/: ast.h  driver.h  lexer.h  parser.h  print.h  tok.h
scripts/: release.sh
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/let/: CMakeLists.txt  eval.cpp  lexer.cpp  parser.cpp  print.cpp  stream.cpp  tok.cpp
test/: bom.let  case.let  comments.let  divzero.let  eval.let  eval.out  invalid.let  precedence.let  precedence.out  rebind.let  run_tests.sh  test.let  unary.let  unary.out  unbound.let  wrap.let  wrap.out
test/error/: invalid.err  missing_semicolon.err  missing_semicolon.let  parse_error.err  parse_error.let  unclosed_paren.err  unclosed_paren.let  unterminated_comment.err  unterminated_comment.let
